year/2022/summer/style.css
html,
body {
  margin: 0;
  padding: 0;
  font-family: serif;
  height: 100vh;
  height: -webkit-fill-available;
}

#gozoku-summer {
  width: 100%;
  min-height: 100vh;
  min-height: -webkit-fill-available;
  background: #000;
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 200px;
  padding: 32px;
}

#gozoku-alert {
  padding: 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#gozoku-alert p {
  font-size: 70px;
}
#gozoku-btn {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  font-size: 70px;
  padding: 32px;
  border-radius: 50%;
  background-color: #fcfcfc;
  box-shadow: 0 0 20px #fcfcfc;
  cursor: pointer;
}

#gozoku-btn::before,
#gozoku-btn::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 100%;
  height: 100%;
  border: 1px solid #fcfcfc;
  border-radius: 50%;
  box-sizing: border-box;
  pointer-events: none;
  animation: pulsate 2s linear infinite;
}

#gozoku-btn::after {
  animation-delay: 1s;
}

#king-text.single-word {
  font-size: 200px;
  font-style: italic;
}

#king-text.all-words {
  font-size: 150px;
  font-weight: bold;
  font-style: italic;
}

.hidden {
  display: none !important;
}

@keyframes pulsate {
  0% {
    transform: scale(1);
    opacity: 1;
  }

  100% {
    transform: scale(2);
    opacity: 0;
  }
}

